--- a/.gitmodules
+++ b/.gitmodules
@@ -27,7 +27,7 @@
 	url = git@github.com:tlhr/anderson.vim.git
 [submodule "zsh/.oh-my-zsh"]
 	path = zsh/.oh-my-zsh
-	url = git@github.com:diogo85/.oh-my-zsh.git
+	url = git@github.com:diogo85/oh-my-zsh.git
 [submodule "vim/bundle/tender"]
 	path = vim/bundle/tender
 	url = git@github.com:jacoborus/tender.vim.git
