Adicionado modo vim no copy mode do tmux

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,2 +1,6 @@
 set -g mouse on
 
+# Copypaste mode
+set-window-option -g mode-keys vi
+bind-key -t vi-copy 'v' begin-selection
+bind-key -t vi-copy 'y' copy-selection
