--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -2,5 +2,5 @@ set -g mouse on
 
 # Copypaste mode
 set-window-option -g mode-keys vi
-bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-selection
+# bind-key -t vi-copy 'v' begin-selection
+# bind-key -t vi-copy 'y' copy-selection
